kubernetes/apps/observability/runzero-explorer/app/runzero-explorer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runzero-explorer
  namespace: observability
  labels:
    app: runzero-explorer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: runzero-explorer
  template:
    metadata:
      labels:
        app: runzero-explorer
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: runzero-explorer
          image: ghcr.io/cowdogmoo/runzero-explorer:latest
          imagePullPolicy: Always
          command: ["/opt/runzero/bin/runzero-explorer.bin", "manual"]
          securityContext:
            runAsUser: 0 # Run as root user
            privileged: true # Required for full functionality of runZero scanner
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
