kubernetes/apps/observability/runzero-explorer/app/runzero-explorer-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    # External DNS Annotations
    external-dns.alpha.kubernetes.io/hostname: runzero-explorer.techvomit.xyz
  name: runzero-explorer
  namespace: observability
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: runzero-explorer
