kubernetes/apps/observability/runzero-explorer/app/runzero-explorer-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: runzero-explorer
  namespace: observability
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: &host runzero-explorer.techvomit.xyz
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: runzero-explorer
                port:
                  number: 443
            path: /
  tls:
    - hosts:
        - *host
      secretName: techvomit-xyz-production-tls
